# rag-document-chatbot

./: .gitignore  ProjectStructure.docx  README.md  main.py  pyproject.toml
app/: app.py
rag/: llm.py  loader.py  retriever.py  vector_store.py
