[project]
name = "aidocumentchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "pypdf>=6.7.5",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
]
